
* Was printing extraneous data when calling setup.py

* Fixed missing paster template files (fixes "paster create -t paste.deploy")

* Excluded tests from release distributions

* Added support for the "call:" protocol for loading apps directly as
  functions (contributed by Jason Stitt)

* Added Python 3.x support

* Dropped Python 2.4 support

1.3.4
-----

* Fix loadconfig path handling on Jython on Windows.

1.3.3
-----

* In :class:`paste.deploy.config.PrefixMiddleware` the headers
  ``X-Forwarded-Scheme`` and ``X-Forwarded-Proto`` are now translated
  to the key ``environ['wsgi.url_scheme']``.  Also ``X-Forwarded-For``
  is translated to ``environ['REMOTE_ADDR']``

* Also in PrefixMiddleware, if X-Forwarded-Host has multiple
  (comma-separated) values, use only the first value.

1.3.2
-----

* Added ``paste.deploy.converters.asint()``.
* fixed use sections overwriting the config's __file__ value with the
  use'd filename.
* ``paste.deploy.loadwsgi`` now supports variable expansion in the
  DEFAULT section of config files (unlike plain ConfigParser).

1.3.1
-----

* Fix ``appconfig`` config loading when using a config file with
  ``filter-with`` in it (previously you'd get TypeError: iteration
  over non-sequence)

1.3
---

* Added ``scheme`` option to ``PrefixMiddleware``, so you can force a
  scheme (E.g., when proxying an HTTPS connection over HTTP).

* Pop proper values into ``environ['paste.config']`` in
  ``ConfigMiddleware``.

1.1
---

* Any ``global_conf`` extra keys you pass to ``loadapp`` (or the other
  loaders) will show up as though they were in ``[DEFAULT]``, so they
  can be used in variable interpolation.  Note: this won't overwrite
  any existing values in ``[DEFAULT]``.

* Added ``force_port`` option to
  ``paste.deploy.config.PrefixMiddleware``.  Also the ``prefix``
  argument is stripped of any trailing ``/``, which can't be valid in
  that position.

1.0
---

* Added some documentation for the different kinds of entry points